| added slice of errors reducer | added errors session actions, reducer | fixed spacing for modal close icon |

--- a/app/assets/stylesheets/api/session-form.scss
+++ b/app/assets/stylesheets/api/session-form.scss
@@ -27,14 +27,14 @@
 
 .form-close {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 0px;
+  right: 0px;
   font-size: 36px;
   font-weight: 100;
-  line-height: 1;
+  line-height: 1.25rem;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.5);
-  padding: 15px;
+  padding: 20px;
 
   &:hover {
     color: rgba(0, 0, 0, .85);
@@ -74,7 +74,7 @@
   text-align: center;
   width: 298px;
   height: 35px;
-  border-radius: 3px;
+  border-radius: 4px;
   border: 1px solid rgba(172, 172, 172, 0.6);
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.04);
   padding: 0;
